--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "bootstrap": "^5.3.0-alpha3",
+    "data-fns": "^1.1.0",
+    "date-fns": "^2.30.0",
     "jspdf": "^2.5.1",
     "pdfmake": "^0.2.7",
     "react": "^18.2.0",
@@ -19,7 +21,7 @@
     "react-icons": "^4.8.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "5.2",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^2.1.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
