--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "servico",
+  "name": "sisescala",
   "version": "0.1.0",
+  "homepage": "http://10.46.212.7/sisescala",
   "private": true,
   "dependencies": {
     "-": "^0.0.1",
@@ -9,6 +10,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@thednp/dommatrix": "^2.0.4",
     "axios": "^1.3.4",
     "bootstrap": "^5.3.0-alpha3",
     "data-fns": "^1.1.0",
