--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "-": "^0.0.1",
     "@fortawesome/fontawesome-free": "^6.4.0",
+    "@popperjs/core": "^2.11.8",
     "@react-pdf/renderer": "^3.1.9",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -12,8 +12,8 @@
     "@thednp/dommatrix": "^2.0.4",
     "axios": "^1.3.4",
     "bootstrap": "^5.3.0-alpha3",
-    "data-fns": "^1.1.0",
     "date-fns": "^2.30.0",
+    "jquery": "^3.7.1",
     "jspdf": "^2.5.1",
     "pdfmake": "^0.2.7",
     "react": "^18.2.0",
@@ -22,7 +22,7 @@
     "react-icons": "^4.8.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "5.2",
-    "react-scripts": "^2.1.8",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
